// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserInvitation creates snapshot 1`] = `
<DocumentFragment>
  <div>
    <div
      class="modal-backdrop activeBackdrop"
      data-testid="modalBackdrop"
    />
    <div
      class="modal modal active d-block"
      role="dialog"
    >
      <div
        class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable"
      >
        <div
          class="modal-content content modal"
        >
          <div
            class="modal-header header"
          >
            <div
              class="h6 text-uppercase mb-0"
            >
              Membership confirmation
            </div>
            <button
              class="close"
              data-testid="closeModalBtn"
              disabled=""
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </button>
          </div>
          <div
            class="modal-body p-4 h-100 d-flex flex-column"
          >
            <div
              class="d-flex flex-column h-100 w-100 px-3 align-items-center justify-content-center text-center position-relative content"
            >
              <div
                class="text-center p-5 wrapper loading"
              >
                <div
                  class="spinner-border text-primary spinner mt-0"
                  role="status"
                >
                  <span
                    class="sr-only"
                  >
                    Loading...
                  </span>
                </div>
              </div>
              <small
                class="text-muted"
              >
                Your are accepting the invitation...
              </small>
            </div>
          </div>
          <div
            class="modal-footer p-3"
          >
            <button
              class="btn btn-secondary"
              data-testid="closeModalFooterBtn"
              disabled=""
              type="button"
            >
              Close
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UserInvitation creates snapshot 2`] = `
<DocumentFragment>
  <div>
    <div
      class="modal-backdrop activeBackdrop"
      data-testid="modalBackdrop"
    />
    <div
      class="modal modal active d-block"
      role="dialog"
    >
      <div
        class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable"
      >
        <div
          class="modal-content content modal"
        >
          <div
            class="modal-header header"
          >
            <div
              class="h6 text-uppercase mb-0"
            >
              Membership confirmation
            </div>
            <button
              class="close"
              data-testid="closeModalBtn"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </button>
          </div>
          <div
            class="modal-body p-4 h-100 d-flex flex-column"
          >
            <div
              class="d-flex flex-column h-100 w-100 px-3 align-items-center justify-content-center text-center position-relative content"
            >
              <svg
                class="display-4 text-success mb-4"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
                />
              </svg>
              You have accepted the invitation to join the organization.
            </div>
          </div>
          <div
            class="modal-footer p-3"
          >
            <button
              class="btn btn-secondary"
              data-testid="closeModalFooterBtn"
              type="button"
            >
              Close
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
